--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,17 @@
 #配置注意事項  以冒號分割鍵值對 鍵+冒號+空白符+值。空白符必不可少
 server:
   context-path: /study
+  #应用端口
   port: 9090
 
 debug: true
+
+#监控开关
+management:
+  security:
+    enabled: false
+  #管理端口
+  port: 9091
 
 togglz:
   enabled: true
@@ -14,6 +22,7 @@ togglz:
 
 flyway:
   locations: /db
+
 
 #togglz.feature-enums=org.lxp.springboot.togglz.MyFeatures
 #togglz.features.FEATURE_ONE.enabled=false
